--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -849,6 +849,6 @@ input[type="text"].modalinput {
 
 #modalcontent .modalloadingspinner .loadingcircle {
   left:50%;
-  top:125px;
+  top:135px;
   transform:translateX(-50%);
 }
